# glpi_dw

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
src/app/: main.py  main_silver.py
src/extractions/: ingest_locations.py  ingest_to_db.py  ingest_users.py  schemas.py
src/schemas/: schemas.py
src/transform/: build_silver.py
src/utils/: api_call.py  get_session.py
